<resources>
    <string name="app_name">蓄电池防盗</string>
    <string name="app_name_all">蓄电池防盗定位</string>
    <string name="app_name_demo">蓄电池防盗Demo</string>
    <string name="title_activity_maps">Map</string>

    <!-- 9CyRVr1pr47xN7Ln7uMoz2fWbZMePser -->
    <!-- 45oSnO0cz93hUm44S0kHbFIBLMg509mp -->
    <string name="baidu_map_ak">quDW3FbuL8P2pRW3cOe6668IUpM98FyH</string>

    <string name="hint_ip_addr">ip地址</string>
    <string name="hint_port">端口号</string>
    <string name="hint_username">用户名</string>
    <string name="hint_pwd">密码</string><!-- 密码 • ● -->
    <string name="login">登录</string>


    <string name="str_his_alarm">历史告警</string>
    <string name="str_device_power">设备电压状态</string>
    <string name="str_power_line">设备电压曲线图</string>

    <string name="demo_name_basemap">基本地图功能</string>
    <string name="demo_title_basemap">基本地图功能--BaseMapDemo</string>
    <string name="demo_desc_basemap">创建一张百度地图并管理地图的生命周期, 包含个性化地图与普通地图切换功能</string>
    <string name="demo_name_map_fragment">基于MapFragment的基本地图</string>
    <string name="demo_title_map_fragment">MapFragment使用--MapFragmentDemo</string>
    <string name="demo_desc_map_fragment">创建一个基于Fragment的地图框架</string>
    <string name="demo_name_multimap">多地图展示</string>
    <string name="demo_title_multimap">多地图展示--MultiMapViewDemo</string>
    <string name="demo_desc_multimap">在一个Activity中创建多个地图展示，不同城市，不同logo位置</string>
    <string name="demo_name_layers">图层展示</string>
    <string name="demo_title_layers">图层展示--LayersDemo</string>
    <string name="demo_desc_layers">展示普通图、卫星图、交通流量图及百度城市热力图</string>
    <string name="demo_name_control">地图操作功能</string>
    <string name="demo_desc_control">介绍地图基本控制方法，对地图单击、长按、双击、截图的事件响应</string>
    <string name="demo_title_control">地图操作功能--MapControlDemo</string>
    <string name="demo_name_ui">UI控制功能</string>
    <string name="demo_title_ui">UI控制功能--UISettingsDemo</string>
    <string name="demo_desc_ui">介绍开关手势功能和显示隐藏UI控件</string>
    <string name="demo_name_location">定位图层展示</string>
    <string name="demo_title_location">定位图层展示--LocationDemo</string>
    <string name="demo_desc_location">介绍定位图层的基本用法</string>
    <string name="demo_name_geometry">自定义绘制功能，折线可点击</string>
    <string name="demo_title_geometry">自定义绘制功能--GeometryDemo</string>
    <string name="demo_desc_geometry">介绍自定义绘制点、线、多边形、圆等几何图形和文字</string>
    <string name="demo_name_favorite">点收藏功能</string>
    <string name="demo_title_favorite">点收藏功能--FavoriteDemo</string>
    <string name="demo_desc_favorite">介绍如何创建、管理本地点数据</string>
    <string name="demo_name_radar">周边雷达功能</string>
    <string name="demo_title_radar">周边雷达功能--RadarDemo</string>
    <string name="demo_desc_radar">介绍如何使用周边雷达功能上传位置、检索周边的人</string>
    <string name="demo_name_overlay">覆盖物功能</string>
    <string name="demo_title_overlay">覆盖物功能--OverlayDemo</string>
    <string name="demo_desc_overlay">介绍添加覆盖物并响应点击功能和弹出pop功能</string>
    <string name="demo_name_poi">POI搜索功能</string>
    <string name="demo_title_poi">POI搜索功能--POISearchDemo</string>
    <string name="demo_desc_poi">介绍关键词查询、suggestion查询和查看餐饮类Place详情页功能</string>
    <string name="demo_name_route">路径规划功能</string>
    <string name="demo_title_route">路径规划功能--RoutePlanDemo</string>
    <string name="demo_title_poinearby">POI附近搜索功能</string>
    <string name="demo_desc_route">介绍跨城交通、公交、驾车、步行、骑行五种线路规划方法及自定义图标方法</string>
    <string name="demo_name_geocode">地理编码功能</string>
    <string name="demo_title_geocode">地理编码功能--GeoCodeDemo</string>
    <string name="demo_desc_geocode">介绍地址信息与坐标之间的相互转换</string>
    <string name="demo_name_bus">公交线路查询功能</string>
    <string name="demo_title_bus">公交线路查询功能--BusLineDemo</string>
    <string name="demo_desc_bus">介绍查询公交线路功能</string>
    <string name="demo_name_offline">离线地图功能</string>
    <string name="demo_title_offline">离线地图功能--OfflineDemo</string>
    <string name="demo_desc_offline">介绍如何下载和使用离线地图</string>
    <string name="demo_name_open_baidumap">调启百度地图</string>
    <string name="demo_title_open_baidumap">调启百度地图--OpenBaiduMap</string>
    <string name="demo_desc_open_baidumap">介绍如何调启百度地图实现自身业务功能</string>
    <string name="demo_name_cloud">LBS.云检索功能</string>
    <string name="demo_title_cloud">LBS.云检索功能--CloudSearchDemo</string>
    <string name="demo_desc_cloud">介绍如何使用LBS.云检索用户自有数据</string>
    <string name="demo_name_heatmap">热力图功能</string>
    <string name="demo_title_heatmap">热力图功能--HeatMapDemo</string>
    <string name="demo_desc_heatmap">介绍如何以热力图形式显示用户自有数据</string>
    <string name="demo_name_opengl">OpenGL绘制功能</string>
    <string name="demo_title_opengl">OpenGL绘制功能--OpenGLDemo</string>
    <string name="demo_title_cluster">点聚合功能--MarkerClusterDemo</string>
    <string name="demo_name_tileoverlay">瓦片图功能</string>
    <string name="demo_desc_cluster">介绍如何实现多个Marker点的点聚合功能</string>
    <string name="demo_title_tileoverlay">瓦片图功能--TileOverlayDemo</string>
    <string name="demo_desc_tileoverlay">介绍如何在地图上添加自定义的瓦片图</string>
    <string name="demo_desc_poinearbysearch">POI附近检索功能</string>
    <string name="demo_desc_texturemapview">地图由TextureView渲染</string>
    <string name="demo_desc_districsearch">介绍如何使用行政区域检索，并绘制区域边界</string>
    <string name="demo_title_districsearch">行政区域检索--DistrictSearchDemo</string>
    <string name="demo_name_districsearch">行政区域检索</string>
    <string name="demo_name_indoor">室内图功能</string>
    <string name="demo_title_indoor">室内图--IndoorMapDemo</string>
    <string name="demo_desc_indoor">介绍室内图功能，显示室内图及室内路线规划</string>
    <string name="demo_name_indoorsearch">室内图检索功能</string>
    <string name="demo_title_indoorsearch">室内图检索--IndoorSearchDemo</string>
    <string name="demo_desc_indoorsearch">介绍在室内图中进行室内POI检索</string>
    <string name="demo_track_show">小车轨迹平滑移动</string>
    <string name="demo_desc_track_show">介绍小车轨迹平滑移动的实现</string>


    <string name="demo_desc_opengl">介绍如何使用OpenGL绘制在地图中进行绘制</string>
    <string name="key_error">"请在  DemoApplication.java文件输入正确的授权Key！\r\n申请地址：http://dev.baidu.com/wiki/static/imap/key/"</string>
    <string name="navi_tip">百度地图SDK支持通过相关的接口，调启百度地图客户端（v5.0以上）导航和Web端百度地图导航。</string>
    <string name="title_activity_cloud_search_demo">云检索使用介绍</string>
    <string name="panorama_poi_tips"> 首先根据关键词进行POI检索，点击地图上的POI点，根据POI的UID进入全景</string>
    <string name="panorama_geo_tips">单击地图以选取坐标点</string>
    <string name="demo_title_share">短串分享功能 --ShareDemo</string>
    <string name="demo_name_share">短串分享</string>
    <string name="demo_desc_share">介绍关键词查询、suggestion查询和查看餐饮类Place详情页功能</string>
    <string name="tileoverlay_online_urlhint">放入图片URL，点击在线</string>
    <string name="tileoverlay_online">在线方式</string>
    <string name="tileoverlay_offline">离线方式</string>
    <string name="hide_poiinfo">隐藏地图上的poi标注</string>
    <string name="title_activity_panorama_activity_main">全景图功能</string>
    <string name="title_activity_panorama_poi_selector">通过POI进入全景图</string>
    <string name="title_activity_panorama_geo_selector">通过地理坐标进入全景图</string>
    <string name="title_activity_panorama_demo">全景图功能</string>
    <string name="title_activity_clustering_demo">ClusteringDemoActivity</string>

    <string name="action_settings">设置</string>
    <string name="action_search">站点查找</string>
    <string name="action_history">历史告警</string>
    <string name="action_alarm">最新告警</string>
    <string name="action_device">设备状态</string>
    <string name="action_station">站点列表</string>
    <string name="action_mine">我的</string>
    <string name="action_power">电压曲线图</string>
    <string name="action_refresh">刷新</string>
    <string name="action_finish">完成</string>

    <string name="title_activity_marker_cluster_demo">点聚合功能</string>
    <string name="title_markercluster_desc">\t\t缩小地图，以显示标注物的聚合点 \n
    \t\t放大地图，显示Marker点 \n</string>
    <string name="title_activity_texture_map_view_demo">TextureMapViewDemo</string>
    <string name="title_activity_poi_near_by_search_demo">PoiNearBySearchDemo</string>
    <string name="instruction">当设计的UI与地图部分重叠时，设置地图的padding值,以防止UI遮挡</string>

</resources>
