<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_station"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history_white"
        android:orderInCategory="100"
        android:title="@string/action_history"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_alarm"
        android:icon="@drawable/ic_baojing"
        android:orderInCategory="100"
        android:title="@string/action_alarm"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_mine"
        android:icon="@drawable/setting"
        android:orderInCategory="100"
        android:title="@string/action_mine"
        android:visible="true"
        app:showAsAction="always" />


</menu>
