<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <!-- logo图和文字 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_15">

            <ImageView
                android:id="@+id/login_logo_iv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/app_name_all"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txt_20"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_15"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/bg_border_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/margin_3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_3"
                android:background="@drawable/ic_user_bph" />

            <EditText
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="@dimen/margin_8"
                android:singleLine="true"
                android:textColor="@color/black_light"
                android:textColorHint="@color/black_light"
                android:textSize="@dimen/txt_15" />


        </LinearLayout>

        <!-- 密码 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_15"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24"
            android:background="@drawable/bg_border_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/margin_3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="1dp"
                android:background="@drawable/ic_lock" />

            <EditText
                android:id="@+id/tv_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_3"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/hint_pwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="@dimen/margin_8"
                android:textColor="@color/black_light"
                android:textColorHint="@color/black_light"
                android:textSize="@dimen/txt_15" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/bg_ripple"
            android:imeOptions="actionGo"
            android:padding="@dimen/margin_8"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_15" />

        <Button
            android:id="@+id/btn_login_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/bg_ripple"
            android:imeOptions="actionGo"
            android:padding="@dimen/margin_8"
            android:text="跳过登录(test)"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_15"
            android:visibility="gone" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </RelativeLayout>

</LinearLayout>
